--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,26 +1,53 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+	font-family: 'Courier New', Courier, monospace;
+}
+
+.infogroup {
+	display: flex;
+	justify-content: center;
+
+	gap: 52px;
+}
+
+.imagegroup {
+	display: flex;
+	width: 200px;
+	margin: 32px 0px 0px 0px;
+	flex-direction: column;
+	align-items: center;
+	flex-wrap: wrap;
+
+	justify-content: baseline;
+}
+
+.imagegroup .text {
+	text-align: center;
+	margin: 16px 0px 0px 0px;
+	word-wrap: break-word;
+	/* gap: 52px; */
 }
 
 img {
-  width: 100px;
-  height: 100px;
+	width: 100px;
+	height: 100px;
 }
 
 .title {
-  font-size: 36px;
-  font-weight: 900;
+	font-size: 36px;
+	font-weight: 900;
+	text-align: center;
+	padding: 0 0 16px 0;
 }
 
 /* do not edit this footer */
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 52px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #eee;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 52px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: #eee;
 }
