--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,6 +13,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 .modal {
@@ -20,6 +21,27 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  gap:16px;
+  padding:16px;
+}
+
+/* .container{
+  width:fit-content;
+  height:fit-content;
+} */
+
+.header{
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+ margin-bottom: 8px;
+}
+
+.text{
+  margin: 0 0 16px 0;
 }
 
 .icon {
@@ -33,6 +55,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
