--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
-  background: #eee;
-  font-family: sans-serif;
+	background: #eee;
+	font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
-  background: #fff;
-  margin: 16px auto;
+	width: 400px;
+	background: #fff;
+	margin: 16px auto;
+	padding: 8px;
 }
 
 .title {
-  background: #e3f4ff;
+	background: #e3f4ff;
+	font-size: 16px;
+	font-weight: bold;
+	margin: 8px auto;
+	padding: 8px;
 }
 
 .content {
-  background: #e3f4ff;
+	background: #e3f4ff;
+	margin: 8px auto;
+	padding: 16px 8px;
 }
 
 .button-container {
-  background: #e3f4ff;
+	text-align: center;
+	background: #e3f4ff;
+	border: 1px solid #eee;
+	padding: 8px;
+	margin: 8px auto auto;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+	display: block;
+	background: white;
+	border: 1px solid #eee;
+	margin: auto;
+	padding: 8px 24px;
 }
