--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -16,6 +16,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: .75em 1em;
+  margin: 0 0 10px 0;
 }
 
 input {
@@ -24,4 +26,50 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+body{
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items:space-between;
+}
+
+.header, .footer{
+  padding: 10px 10px;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+align-content: space-between;
+
+}
+
+.footer{
+  background-color:#eeeeee;
+
+}
+
+ul{
+  padding: 0;
+  margin: 0;
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  gap: 16px;
+  align-content: center;
+}
+
+a{
+color: gray;
+  font-size: 16px;
+  text-decoration: none;
+
+}
+
+.content {
+display: flex;
+flex-direction: column;
+align-content:space-between;
+justify-content: space-between;
+align-items: center;
 }
