--- a/flex/07-flex-layout-2/first attempt/style.css
+++ b/flex/07-flex-layout-2/first attempt/style.css
@@ -4,13 +4,24 @@ body {
 	margin: 0;
 	min-height: 100vh;
 }
-
+body {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+}
 .header {
 	height: 72px;
 	background: darkmagenta;
 	color: white;
 }
 
+.header {
+	font-size: 32px;
+	font-weight: 900;
+	display: flex;
+	align-items: center;
+	padding: 0 16px;
+}
 .footer {
 	height: 72px;
 	background: #eee;
@@ -22,71 +33,40 @@ body {
 	background: royalblue;
 }
 
+.sidebar {
+	flex: 1 0;
+	/* flex-basis:100vh ; */
+}
+
 .card {
 	border: 1px solid #eee;
 	box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
 	border-radius: 4px;
 }
 
-body {
-	display: flex;
-	flex-direction: column;
+.card {
+	flex: 1;
 }
 
+.card-cont {
+	width: auto;
+	flex: 1;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+	gap: 24px;
+}
 a {
+	padding: 0;
 	font-size: 24px;
 	color: white;
 	text-decoration: none;
 }
-
 ul {
 	padding: 0;
-	margin: 0;
 	list-style: none;
 }
-
 li {
-	margin-bottom: 16px;
-}
-
-.sidebar {
-	flex-shrink: 0;
-	padding: 16px;
-}
-
-.container {
-	display: flex;
-	flex: auto;
-}
-
-.card-cont {
-	padding: 32px;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.card {
-	padding: 16px;
-	margin: 16px;
-	width: 300px;
-}
-
-.header,
-.footer {
-	display: flex;
-	min-width: 100vw;
-}
-
-.header {
-	display: flex;
-	padding: 0px 16px;
-	font-size: 32px;
-	font-weight: 900;
-	align-items: center;
-}
-
-.footer {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	padding: 0.5em 1em;
 }
