--- a/flex/07-flex-layout-2/flexattempt2.css
+++ b/flex/07-flex-layout-2/flexattempt2.css
@@ -28,17 +28,12 @@ body {
 	border-radius: 4px;
 }
 
-body {
-	display: flex;
-	flex-direction: column;
-}
-
 a {
+	padding: 0;
 	font-size: 24px;
 	color: white;
 	text-decoration: none;
 }
-
 ul {
 	padding: 0;
 	margin: 0;
@@ -46,47 +41,52 @@ ul {
 }
 
 li {
-	margin-bottom: 16px;
+	padding: 0.5em 1em;
 }
 
 .sidebar {
 	flex-shrink: 0;
-	padding: 16px;
+	display: flex;
+	flex-direction: column;
+	justify-content: stretch;
+	align-content: stretch;
 }
 
 .container {
 	display: flex;
 	flex: auto;
 }
-
 .card-cont {
 	padding: 32px;
+	gap: 32px;
+	min-width: 400px;
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: flex-start;
+	align-content: flex-start;
 }
 
 .card {
 	padding: 16px;
-	margin: 16px;
-	width: 300px;
+	min-width: 300px;
+	max-width: 300px;
+	/* flex: auto; */
+	flex-wrap: wrap;
 }
 
 .header,
 .footer {
 	display: flex;
-	min-width: 100vw;
+	width: 100vw;
+	align-items: center;
+	justify-content: stretch;
 }
 
-.header {
+body {
 	display: flex;
-	padding: 0px 16px;
-	font-size: 32px;
-	font-weight: 900;
-	align-items: center;
-}
-
-.footer {
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	flex-direction: column;
+	align-content: flex-start;
+	align-items: flex-start;
+	justify-content: space-between;
 }
