--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -4,6 +4,11 @@ body, html {
 }
 
 .container {
+  display:grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap: 15px;
+
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -21,10 +26,14 @@ body, html {
 
 .header {
   background-color: #FFDE22;
+  grid-column: 1/3;
+  grid-row: 1;
 }
 
 .sidebar {
   background-color: #FF7755;
+  grid-column: 1;
+  grid-row: 2/4;
 }
 
 .nav {
@@ -44,4 +53,6 @@ body, html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
+  grid-row: 4;
 }
