--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,56 +5,97 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
 }
 
 .container div {
   padding: 15px;
   font-size: 32px;
-  font-family: Helvetica;
+  font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
   font-weight: bold;
   color: white;
 }
 
 .header {
   background-color: #393f4d;
+  grid-column: span 4;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style-type: none;
+}
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 0.5fr));
+  gap:50px;
+  align-content: space-evenly;
+
+
+}
+.menu li{
+  grid-row:1;
 }
 
 .sidebar {
-  background-color: #FF7755;
+  background-color: #f75;
+  gap: 50px;
+  grid-column: 1;
+  grid-row:span 4;
+  display:grid;
+  text-align: center;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-template-rows: repeat(auto-fit, minmax(250px, 1fr)); */
 }
-
 .sidebar .photo {
   background-color: white;
   color: black;
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  /* grid-row:span 1; */
 }
-
 
 .sidebar .side-content {
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+  text-align: center;
+  /* grid-row:span 1; */
+  /* margin:1rem 0; */
 }
 
 .nav {
-  background-color: #FF7755;
+  background-color: #f75;
+  grid-row: 2/3;
+  grid-column:2/5;
+
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
-}
+  list-style-type: none;
 
+}
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
 .article {
+  grid-column:2;
+  display:inline-grid;
   background-color: #bccbde;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+  gap:15px;
+  justify-content: space-evenly;
 }
 
 .article p {
@@ -64,10 +105,14 @@
   text-align: left;
 }
 
+.logo{
+  text-align: start;
+}
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #fff;
   color: black;
   text-align: center;
+  height:200px;
 }
 
 .card p {
@@ -83,9 +128,11 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 4;
+  grid-row:6/7;
 }
 
 .footer p {
   font-size: 13px;
-  font-weight: normal;  
+  font-weight: normal;
 }
